initial KiCad PCB support

--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,8 @@
 			Keyboard Firmware Builder by <a href="http://www.ruiqimao.com/" target="_blank">Ruiqi Mao</a>
 			<br>
 			<a href="https://github.com/qmk/qmk_firmware" target="_blank">QMK Firmware</a> by <a href="https://github.com/jackhumbert" target="_blank">Jack Humbert</a>
+			<br>
+			PCB Builder by <a href="https://github.com/fcoury" target="_blank">Felipe Coury</a> (<a href="http://mrkeebs.com">MrKeebs</a>)
 			<br><br>
 			<b>Keyboard Firmware Builder is not officially related to QMK Firmware.<br>This is purely a third-party tool using QMK as its firmware base.</b>
 			<br><br>
